stylesheets/style.css
/* ... */
.file:not(.multifile) {
  float: none;
}

p.fileinfo {
  display: block;
  margin: 0.2em 0px;
}

div.banner {
  background-color: #E04000;
  font-size: 12pt;
  font-weight: bold;
  text-align: center;
  margin: 1em 0;
}

div.banner,div.banner a {
  color: white;
}

div.banner a:hover {
  color: #EEF2FF;
  text-decoration: none;
}

img.banner,img.board_image {
  display: block;
  border: 1px solid #a9a9a9;
  margin: 12px auto 0 auto;
}

.post-image {
  display: block;
  float: left;
  margin: 5px 20px 10px 20px;
  border: none;
}

.full-image {
  max-width: 98%;
}

div.post .post-image {
  padding: 0.2em;
  margin: 0 20px 0 0;
}

div.post img.icon {
  display: inline;
  margin: 0 5px;
  padding: 0;
}

div.post i.fa {
  margin: 0 4px;
  font-size: 16px;
}

div.post.op hr {
  border-color: #D9BFB7;
}

.intro {
  padding: 0px;
  line-height: 1.3em;
}

.intro span {
  min-width: 0.3em;
  display: inline-block;
}

.post-details {
  text-wrap: nowrap;

  @media (max-width: 48em) {
    float: right;
  }
}

input.delete {
  float: left;
  margin: 1px 6px 0px 0px;
  scale: 1.05;
}

.intro span.name {
  color: #117743;
  font-weight: bold;
}

.post-details span.capcode,p.intro a.capcode,p.intro a.nametag {
  color: #F00000;
  margin-left: 0;
}

@media (max-width: 48em) {
  .user-controls {
    clear: both;
    float: right;
  }
}

.post-details a {
  margin-left: 5px;
}

.intro a {
  margin-left: 8px;
}

div.delete {
  float: right;
}

.required-star {
  color: maroon;
}

div.post {
  margin: 0.2em 4px;
  padding: 0.5em 0.3em;
  display: inline-block;
  max-width: 94%!important;
  overflow-wrap: break-word;

  @media (max-width: 48em) {
    margin: 0.1em 0px;
    padding: 0.5em 0px;
    width: 100%;
    max-width: unset!important;
  }
}

div.post > div.head {
  margin: 0.1em 1em;
  clear: both;
  line-height: 1.3em;
}

div.post > p {
  margin: 0.1em 0.4em;

  font-size: 13px;
  min-height: 1.16em;

  @media (max-width: 48em) {
    margin-right: 1.4em;
  }
}

div.post.op > p {
  clear: both;
  padding-top: 1em;
}

div.post div.body {
  margin-top: 0.8em;
  padding-right: 3em;
  padding-bottom: 0.3em;
}

div.post.reply.highlighted {
  background: #D6BAD0;
}

div.post.reply div.body a {
  color: #D00;
}

div.post {
  padding-left: 20px;
}

div.post div.body {
  word-wrap: break-word;
  white-space: pre-wrap;
}

div.post.op {
  padding-top: 0px;

  /* Add back in the padding that is provided by body on large screens */
  @media (max-width: 48em) {
    padding-left: 4px;
    padding-right: 4px;
  }
}

div.post.reply {
  background: #D6DAF0;
  border-width: 1px;
  border-style: none solid solid none;
  border-color: #B7C5D9;

  @media (max-width: 48em) {
    border-right-style: none;
  }
}

span.trip {
  color: #228854;
}

span.quote {
  color: #789922;
}

span.omitted {
  display: block;
  margin-top: 1em;
}

br.clear {
  clear: left;
  display: block;
}

span.controls {
  margin: 0;
  padding: 0;
}

span.controls a {
  margin: 0;
  text-wrap: nowrap;
  display: inline-block;
}

div#wrap {
  width: 900px;
  margin: 0 auto;
}

div.ban {
  background: white;
  border: 1px solid #98E;
  max-width: 700px;
  margin: 30px auto;
}

div.ban p,div.ban h2 {
  padding: 3px 7px;
}

div.ban h2 {
  background: #98E;
  color: black;
  font-size: 12pt;
}

div.ban p {
  font-size: 12px;
  margin-bottom: 12px;
}

div.ban p.reason {
  font-weight: bold;
}

span.heading {
  color: #AF0A0F;
  font-size: 11pt;
  font-weight: bold;
}

span.spoiler {
  background: black;
  color: black;
  padding: 0 1px;
}

div.post.reply div.body span.spoiler a {
  color: black;
}

span.spoiler:hover,div.post.reply div.body span.spoiler:hover a {
  color: white;
}

div.styles {
  float: right;
  padding-bottom: 20px;
}

div.styles a {
  margin: 0 10px;
}

div.styles a.selected {
  text-decoration: none;
}

table.test {
  width: 100%;
}

table.test td,table.test th {
  text-align: left;
  padding: 5px;
}

table.test tr.h th {
  background: #98E;
}

table.test td img {
  margin: 0;
}

fieldset label {
  display: block;
}

div.pages {
  color: #89A;
  background: #D6DAF0;
  display: inline-block;
  padding: 8px;
  margin: 8px 0 4px 0;
  border-right: 1px solid #B7C5D9;
  border-bottom: 1px solid #B7C5D9;
}

div.pages.top {
  display: block;
  padding: 5px 8px;
  margin-bottom: 5px;
  position: fixed;
  top: 0;
  right: 0;
  opacity: 0.9;
}

@media screen and (max-width: 800px) {
  div.pages.top {
    display: none!important;
  }
}

div.pages a.selected {
  color: black;
  font-weight: bolder;
}

div.pages a {
  text-decoration: none;
}

div.pages form {
  margin: 0;
  padding: 0;
  display: inline;
}

div.pages form input {
  margin: 0 5px;
  display: inline;
}

hr {
  border: none;
  border-top: 1px solid #B7C5D9;
  height: 0;
  clear: left;
}

div.report {
  color: #333;
}

table.modlog {
  margin: auto;
  width: 100%;
}

table.modlog tr td {
  text-align: left;
  margin: 0;
  padding: 4px 15px 0 0;
}

table.modlog tr th {
  text-align: left;
  padding: 4px 15px 5px 5px;
  white-space: nowrap;
}

table.modlog tr th {
  background: #98E;
}

td.minimal,th.minimal {
  width: 1%;
  white-space: nowrap;
}

div.top_notice {
  text-align: center;
  margin: 5px auto;
}

span.public_ban {
  display: block;
  color: red;
  font-weight: bold;
  margin-top: 15px;
}

span.toolong {
  display: block;
  margin-top: 15px;
}

div.blotter {
  color: red;
  font-weight: bold;
  text-align: center;
}

table.mod.config-editor {
  font-size: 9pt;
  width: 100%;
}

table.mod.config-editor td {
  text-align: left;
  padding: 5px;
  border-bottom: 1px solid #98e;
}

table.mod.config-editor input[type="text"] {
  width: 98%;
}

.desktop-style div.boardlist:nth-child(1) {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  margin-top: 0;
  z-index: 30;
  box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
  border-bottom: 1px solid;
  background: inherit;
}

.desktop-style body {
  padding-top: 20px;
}

.desktop-style .sub {
  background: inherit;
}
/* ... */

